k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: factory-employee-app
  labels:
    name: factory-employee-app
